--- a/styles.css
+++ b/styles.css
@@ -2,4 +2,261 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+
+  font-family: 'montserrat', sans-serif;
+}
+
+:root {
+  --primary: #ea40a4;
+  --light: #eee;
+  --dark: #313154;
+  --grey: #888;
+  --danger: #ff5b57;
+
+  --business: #3a82ee;
+  --personal: var(--primary);
+  --business-glow: 0px 0px 4px rgba(58, 130, 238, 0.75);
+  --personal-glow: 0px 0px 4px rgba(234, 64, 164, 0.75);
+
+  --shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+}
+
+input:not([type='radio']):not([type='checkbox']),
+button {
+  appearance: none;
+  border: none;
+  outline: none;
+  background: none;
+
+  cursor: initial;
+}
+
+body {
+  background: var(--light);
+  color: var(--dark);
+}
+
+section {
+  margin: 2rem 0;
+  padding: 0 1.5rem;
+}
+
+h3 {
+  margin-bottom: 0.5rem;
+
+  color: --dark;
+  font-size: 1rem;
+  font-weight: 400;
+}
+
+h4 {
+  margin-bottom: 0.5rem;
+
+  color: var(--grey);
+  font-size: 0.875rem;
+  font-weight: 700;
+}
+
+.greeting {
+  display: flex;
+}
+
+.greeting .title input {
+  min-width: 0;
+  margin-left: 0.5rem;
+
+  flex: 1 1 0%;
+}
+
+.greeting .title,
+.greeting .title input {
+  color: var(--dark);
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+
+.create-todo input[type='text'] {
+  width: 100%;
+  margin-bottom: 1.5rem;
+  padding: 1rem 1.5rem;
+
+  display: block;
+
+  border-radius: 0.5rem;
+  box-shadow: var(--shadow);
+  background-color: #fff;
+  color: var(--dark);
+  font-size: 1.125rem;
+}
+
+.create-todo .options {
+  margin-bottom: 1.5rem;
+
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem;
+}
+
+.create-todo .options label {
+  padding: 1.5rem;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  border-radius: 1rem;
+  box-shadow: var(--shadow);
+  background-color: #fff;
+
+  cursor: pointer;
+}
+
+input[type='radio'],
+input[type='checkbox'] {
+  display: none;
+}
+
+.bubble {
+  width: 20px;
+  height: 20px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  border-radius: 50%;
+  border: 2px solid var(--business);
+  box-shadow: var(--business-glow);
+}
+
+.bubble.personal {
+  border-color: var(--personal);
+  box-shadow: var(--personal-glow);
+}
+
+.bubble::after {
+  width: 0;
+  height: 0;
+
+  content: '';
+  display: block;
+
+  border-radius: 50%;
+
+  background-color: var(--business);
+  box-shadow: var(--business-glow);
+
+  opacity: 0;
+  transition: 0.2s ease-in-out;
+}
+
+.bubble.personal::after {
+  background-color: var(--personal);
+  box-shadow: var(--personal-glow);
+}
+
+input:checked ~ .bubble::after {
+  width: 10px;
+  height: 10px;
+
+  opacity: 1;
+}
+
+.create-todo .options label div {
+  margin-top: 1rem;
+
+  color: var(--dark);
+  font-size: 1.125rem;
+}
+
+.create-todo input[type='submit'] {
+  width: 100%;
+  padding: 1rem 1.5rem;
+
+  display: block;
+
+  border-radius: 0.5rem;
+  box-shadow: var(--personal-glow);
+  background-color: var(--primary);
+  color: #fff;
+  font-size: 1.125rem;
+
+  cursor: pointer;
+  transition: 0.2s ease-in-out;
+}
+
+.create-todo input[type='submit']:hover {
+  opacity: 0.75;
+}
+
+.todo-list .list {
+  margin: 1rem 0rem;
+}
+
+.todo-list .todo-item {
+  margin-bottom: 1rem;
+  padding: 1rem;
+
+  display: flex;
+  align-items: center;
+
+  border-radius: 0.5rem;
+  box-shadow: var(--shadow);
+  background-color: #fff;
+}
+
+.todo-item label {
+  margin-right: 1rem;
+
+  display: block;
+
+  cursor: pointer;
+}
+
+.todo-item .todo-content {
+  flex: 1 1 0%;
+}
+
+.todo-item .todo-content input {
+  color: var(--dark);
+  font-size: 1.125rem;
+}
+
+.todo-item .actions {
+  display: flex;
+  align-items: center;
+}
+
+.todo-item .actions button {
+  padding: 0.5rem;
+
+  display: block;
+
+  border-radius: 0.25rem;
+  color: #fff;
+
+  cursor: pointer;
+  transition: 0.2s ease-in-out;
+}
+
+.todo-item .actions button:hover {
+  opacity: 0.75;
+}
+
+.todo-item .actions .edit {
+  margin-right: 0.5rem;
+
+  background-color: var(--primary);
+}
+
+.todo-item .actions .delete {
+  margin-right: 0.5rem;
+
+  background-color: var(--danger);
+}
+
+.todo-item.done .todo-content input {
+  text-decoration: line-through;
+  color: var(--grey);
 }
